@@ -7,6 +7,7 @@ sbuild (0.44) UNRELEASED; urgency=low
       The functions moved into the modules have been removed.
     - Import needed module functions into the local namespace, to avoid
       long namespace prefixes on functions.
+    - Remove $main::chroot_apt_options.
   * Sbuild.pm: Add basename function.
   * Sbuild/Chroot.pm:
     - New perl module for chroot operations.  It contains the functions
@@ -16,6 +17,8 @@ sbuild (0.44) UNRELEASED; urgency=low
     - Don't export init and log_command.
     - Don't hardcode a list of chroots; use a glob to search for chroot-*
       instead.  This allows any distribution name to be specified with -d.
+    - Add an "APT Options" attribute to the chroot hash, to replace
+      $main::chroot_apt_options.
   * Sbuild/Conf.pm: New perl module for configuration variables.  It reads
     the system and user configuration.
   * Sbuild/Log.pm: New perl module for logging.  It contains the functions
